--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
             <li><a href="{{ p.url }}">{{ p.short_name }}</a></li>
             {% endif %}
             {% endfor %}
-            <li><a href="/">View All</a></li>
+            <li><a href="index.html">View All</a></li>
          </ul>
 
       </header>
