--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,12 +21,12 @@
          <h1 class="header" style="font-size: 24px">{{ site.title | default: site.github.repository_name }}</h1>
          <img src="/photos/sunglasses.jpeg" style="border-radius: 50%" width="150"/>
          <ul>
-            {% for p in site.players %}
+            {% for p in site.data.players %}
             {% if p.sidebar %}
-            <li><a href="{{ p.url }}">{{ p.short_name }}</a></li>
+            <li><a href="{{ p.url | relative_url }}">{{ p.short_name }}</a></li>
             {% endif %}
             {% endfor %}
-            <li><a href="index.html">View All</a></li>
+            <li><a href="{{ '/' | relative_url }}">View All</a></li>
          </ul>
 
       </header>
