--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,17 +18,21 @@
   <body>
     <div class="wrapper">
       <header>
-         <h1 class="header" style="font-size: 24px">{{ site.title | default: site.github.repository_name }}</h1>
-         <img src="/photos/sunglasses.jpeg" style="border-radius: 50%" width="150"/>
+         <h1 class="header" style="font-size: 24px">
+          <a href="https://soldiermoth.com">Bobby</a>'s Players
+        </h1>
+         <a href="https://soldiermoth.com">
+          <img src="/photos/sunglasses.jpeg" style="border-radius: 50%" width="150"/>
+         </a>
          <ul>
             {% for p in site.data.players %}
             {% if p.sidebar %}
             <li><a href="{{ p.url | relative_url }}">{{ p.short_name }}</a></li>
             {% endif %}
             {% endfor %}
-            <li><a href="{{ '/' | relative_url }}">View All</a></li>
+            <li><a href="{{ '/' | relative_url }}">All Players</a></li>
          </ul>
-
+         <a class="buttons github" href="{{ site.github.repository_url }}">View On GitHub</a>
       </header>
 
       <section>
